Fixing wrong height on the card component

--- a/challenges/singlepricegrid/src/styles.css
+++ b/challenges/singlepricegrid/src/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .cards {
-  @apply w-10/12 max-w-xl my-20 mx-auto;
+  @apply w-10/12 max-w-xl m-auto;
   @apply grid sm:grid-cols-2;
   @apply rounded-xl overflow-hidden;
 }
